--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^29.5.11",
+        "@types/jest": "^29.5.12",
         "@types/node": "^20.10.4",
-        "@types/react": "^18.2.42",
-        "@types/react-dom": "^18.2.17",
+        "@types/react": "^18.2.58",
+        "@types/react-dom": "^18.2.19",
+        "axios": "^1.6.7",
+        "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.2",
+        "express": "^4.18.2",
         "json-server": "^0.17.4",
         "jsonplaceholder": "^0.3.3",
+        "jsonwebtoken": "^9.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.0.2",
@@ -22,16 +26,18 @@
         "redux": "^5.0.0",
         "redux-thunk": "^3.1.0",
         "swiper": "^11.0.6",
+        "typescript": "^5.3.3",
         "uniqid": "^5.4.0",
         "uuid": "^9.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
-        "start-app": "json-server --watch server/db.json && react-scripts start",
+        "start-app": "json-server --watch ../server/db.json && react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "start-server": "nodemon ../server/index.js"
     },
     "eslintConfig": {
         "extends": [
@@ -50,5 +56,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.0"
     }
 }
