--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.9.2",
-        "nodemailer": "^6.9.11"
+        "nodemailer": "^6.9.11",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
