--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
         "@types/react": "^18.2.58",
         "@types/react-dom": "^18.2.19",
         "axios": "^1.6.7",
-        "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.2",
-        "express": "^4.18.2",
-        "json-server": "^0.17.4",
-        "jsonplaceholder": "^0.3.3",
-        "jsonwebtoken": "^9.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.0.2",
@@ -26,7 +21,6 @@
         "redux": "^5.0.0",
         "redux-thunk": "^3.1.0",
         "swiper": "^11.0.6",
-        "typescript": "^5.3.3",
         "uniqid": "^5.4.0",
         "uuid": "^9.0.1",
         "web-vitals": "^2.1.4"
@@ -58,6 +52,6 @@
         ]
     },
     "devDependencies": {
-        "nodemon": "^3.1.0"
+        "typescript": "^5.3.3"
     }
 }
